
*** handle skip list
so easy to manually configure which parts to not display when
the heuristics in archi_code_lexer are not enough.

*** improve completion box by considering not only files mentions in the
light db (while still filtering object files and skip list files)

*** cleanup the code, introduce world type, less use of refs

** scheck

*** support more languages via graph_code_checker
mainly deadcode detection for now

** clang

*** codegraph: less dupes, less false edges due to dupes, 

*** codegraph: better handle typedefs, more accurate type dependencies
for structures

** php

*** support for short lambda, require traits, and try finally (facebook
extensions)

** javascript

*** support for arrow (aka short lambda), variable number of parameters,
trailing commas, interpolated strings, and fix bugs in regexp and xhp

** internal

*** find_source.ml, also many things works now with multiple dirs and
skip list

*** cleanup commons/, remove lib-xml, lib-sexp, lib-json

*** add configure option for Javalib and cmt

*** works again with ocaml 3.12

* -----------------------------------------------------------

* 0.26 (Q4 2013) (basic OPAM package)

** internal:

*** opam package (just the parsers and commons)

*** port to 4.01 graph_code_cmt.ml, make it configurable
simplified configure output too

*** split h_program-lang, introduce graph_code/

** codegraph

*** new -derived_data option (generate TAGS, layers, prolog, light db)

*** build light db from graph_code, and make it fast enough

*** new -test_transitive_deps action to extract parts of huge codebase

** php

*** support for namespace part2 (graph_code)

** javascript

*** support new class syntax, JSX (xhp)

** doc

*** talk codemap/codegraph ocaml workshop
 http://ocaml.org/meetings/ocaml/2013/program.html

* 0.25 (Q3 2013) (codemap/codegraph integration)

** codemap

*** highlight users and uses of the file under the cursor
via graph_code
