@@ -39,7 +39,9 @@ light db (while still filtering object files and skip list files)
 ** scheck
 
 *** support more languages via graph_code_checker
-mainly deadcode detection for now
+
+*** software architecture related checks
+Deadcode, UnusedExport, UndefinedDefOfDecl
 
 ** clang
 
